--- a/Html/Ardidas.html
+++ b/Html/Ardidas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="../JS/Ardidas.js"></script>
     <title>Ardidas</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -17,24 +19,50 @@
             </div>
             <h1>Ardidas</h1>
             <div>
-                <img class="icones" src="../IMG/burrito.svg" alt=""> 
+                <img class="icones" src="../IMG/burrito.svg" alt="">
                 <span id="span"></span>
                 <img class="icones" src="../IMG/mexican.svg" alt="">
 
-             </div>
+            </div>
 
         </nav>
-        <section class="prod">
-           
-            <div class="dvp1">
-            </div>
-            <div class="dvp2">
-            </div>
-            <div class="dvp3">
-            </div>
-            <div class="dvp4">
-            </div>
-        </section>
     </header>
+    <section class="prod">
+
+        <div class="expandir" class="dvp1">
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+
+        </div>
+        <div class="expandir" class="dvp2">
+
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+        </div>
+        <div class="expandir" class="dvp3">
+
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+
+        </div>
+        <div class="expandir" class="dvp4">
+
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+            <div class="subdiv"></div>
+
+        </div>
+    </section>
+    <section class="end">
+
+    </section>
 </body>
+
 </html>
