--- a/Html/Ardidas.html
+++ b/Html/Ardidas.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../kitandinha/css/reset.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <script src="../JS/Ardidas.js"></script>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/ardidas.js"></script>
     <title>Ardidas</title>
 </head>
 
@@ -15,53 +15,17 @@
     <header>
         <nav class="navbar">
             <div>
-                <img class="icones" src="../IMG/chili-pepper.svg" alt="">
+                <img src="../img/chili-pepper.svg" alt="Logo da Empresa">
+                <h1>Ardidas</h1>
             </div>
-            <h1>Ardidas</h1>
-            <div>
-                <img class="icones" src="../IMG/burrito.svg" alt="">
-                <span id="span"></span>
-                <img class="icones" src="../IMG/mexican.svg" alt="">
-
-            </div>
-
+            <img src="../img/mexican.svg" alt="">
         </nav>
     </header>
-    <section class="prod">
-
-        <div class="expandir" class="dvp1">
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-
-        </div>
-        <div class="expandir" class="dvp2">
-
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-        </div>
-        <div class="expandir" class="dvp3">
-
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-
-        </div>
-        <div class="expandir" class="dvp4">
-
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-            <div class="subdiv"></div>
-
-        </div>
-    </section>
-    <section class="end">
-
+    <section class="section-selecao">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
 </body>
 
