--- a/Html/Ardidas.html
+++ b/Html/Ardidas.html
@@ -22,11 +22,45 @@
         </nav>
     </header>
     <section class="section-selecao">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+        <div class="variavel">
+            <div class="typP">Tipo de Tortilha</div>
+            <div class="type-massa">
+                <label for="tradicional">Tradicional</label>
+                <input type="radio" value="tradicional" name="massa-selecionada" id="tradicional">
+            </div>
+            <div class="type-massa">
+                <label for="fit">Fit</label>
+                <input type="radio" value="fit" name="massa-selecionada" id="fit">
+            </div>
+            <div class="type-massa  ">
+                <label for="vegana">Vegana</label>
+                <input type="radio" value="vegana" name="massa-selecionada" id="vegana">
+            </div>
+        </div>
+        <div class="variavel">
+            <div class="typeP">Molhos</div>
+            <div class="type">
+                <div>Pastar de Feijão</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Molho de Tomate</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Guacamole</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Pimenta</div>
+                <input type="button">
+            </div>
+        </div>
     </section>
+    <div class="footer">
+
+    </div>
 </body>
 
 </html>
