--- a/Html/Ardidas.html
+++ b/Html/Ardidas.html
@@ -7,14 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
-    <script src="../js/ardidas.js"></script>
+    <script src="../js/Controller/MenuControler.js"></script>
+    <script src="../js/Service/MenuService.js"></script>
     <title>Ardidas</title>
 </head>
 
 <body>
     <header>
+        <div id="menu">
+            <div class="abaMenu"></div>
+            <div class="foraMenu" onclick="fecharMenu()"></div>
+        </div>
         <nav class="navbar">
-            <div>
+            <div onclick="abrirMenu()">
                 <img src="../img/chili-pepper.svg" alt="Logo da Empresa">
                 <h1>Ardidas</h1>
             </div>
@@ -24,10 +29,10 @@
     <section class="section-selecao">
 
         <div class="variavel">
-            <div class="typP">Tipo de Tortilha</div>
+            <div class="typeP">Tipo de Tortilha</div>
             <div class="type-massa">
                 <label for="tradicional">Tradicional</label>
-                <input type="radio" value="tradicional" name="massa-selecionada" id="tradicional">
+                <input type="radio" value="tradicional" name= "massa-selecionada" id="tradicional">
             </div>
             <div class="type-massa">
                 <label for="fit">Fit</label>
@@ -38,6 +43,42 @@
                 <input type="radio" value="vegana" name="massa-selecionada" id="vegana">
             </div>
         </div>
+        <div class="variavel">
+            <div class="typeP">Molhos</div>
+            <div class="type">
+                <div>Pasta de Feijão</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Molho de Tomate</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Guacamole</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Molho de Pimenta</div>
+                <input type="button">
+            </div>
+        <div class="variavel">
+            <div class="typeP">Carne</div>
+            <div class="type">
+                <div>Pastar de Feijão</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Molho de Tomate</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Guacamole</div>
+                <input type="button">
+            </div>
+            <div class="type">
+                <div>Pimenta</div>
+                <input type="button">
+            </div>
         <div class="variavel">
             <div class="typeP">Molhos</div>
             <div class="type">
